<resources>
    <string name="app_name">EZLifeAndroid</string>
    <string name="wakeOnLanActivity">Wake on LAN</string>
    <string name="inputMac">Enter MAC Address</string>
    <string name="inputIp">Enter IP Broadcast Address</string>
    <string name="startPC">Start PC</string>
    <string name="wakeOnLanInfo">
        1. Wake on LAN may be disabled by default in your BIOS/UEFI. Consult your motherboard manual, how to enable Wake on LAN in your BIOS/UEFI.\n
        2. You may need to change your network card settings in your Operation System to enable Wake on LAN.\n
        3. If you are going to use Wake on LAN to switch on the laptop, be advised that it may require AC power to work.\n
        4. This functionality only works, when target device is connected via LAN. WLAN is not supported.\n
    </string>
    <string name="save">Save</string>
    <string name="savedPCs">Saved PCs:</string>
    <string name="bottomNavigationItem1">WOL</string>

    <string name="wearable_device_is_connected">Wearable device is connected</string>
    <string name="tap_to_edit_message">Tap to edit message</string>
    <string name="send_message_to_wearable">Send message to wearable</string>
    <string name="wearable_message">Wearable message</string>
    <string name="message">Message content</string>
    <string name="message_log">Message log</string>
    <string name="init">...</string>
    <string name="check_for_connected_wearables">Check for connected wearables</string>
    <string name="send_message_alt">Send Message to Wearable</string>
    <string name="wearableDataLayerActivity">Wearable Data Layer</string>
    <string name="alarmsActivity">Alarms</string>
</resources>